--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
-h1 {
-  color: blue;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+li {
+  list-style: none;
+}
+ul {
+  padding: 0;
+}
+.header {
+  font-size: 16px;
+}
+.weather-app {
+  max-width: 400px;
+  margin: 40px auto;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+  padding: 30px;
+}
+.row {
+  font-size: 12px;
 }
