updated javascript data

--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,11 @@ li {
   list-style: none;
 }
 ul {
-  padding: 0;
+  padding: none;
 }
+
 .header {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .weather-app {
