Added html and css for forecast

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ li:first-letter {
 }
 
 .row {
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .col {
@@ -36,7 +36,6 @@ li:first-letter {
 }
 
 .temperature-now {
-  padding: 30px;
   position: relative;
   right: -20px;
 }
@@ -59,4 +58,34 @@ li:first-letter {
 }
 .active:hover {
   text-decoration: none;
+}
+
+.weather-forecast {
+  margin-top: 10px;
+}
+
+.weather-forecast h3 {
+  color: rgb(186, 186, 186);
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  height: 15px;
+  line-height: 15px;
+  padding-top: 7px;
+}
+
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  max-width: 38px;
+}
+
+.weather-forecast-temperature {
+  text-align: center;
+  color: rgb(135, 135, 135);
+  font-size: 13px;
+  font-weight: 400;
+  height: auto;
+  line-height: 15px;
+  white-space: nowrap;
 }
