--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,25 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  color: #ffffff;
+}
+h1 {
+  text-align: center;
 }
 li {
   list-style: none;
 }
 ul {
   padding: none;
+  display: contents;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+.displayinfo {
+  background-color: #bdacbc;
+  border: 1px solid #bdacbc;
+  border-radius: 5px;
+  margin-top: 30px;
 }
 
 li:first-letter {
@@ -17,33 +30,38 @@ li:first-letter {
   font-size: 15px;
 }
 
+.row .displayinfo {
+  background-color: #6284a3;
+  border: 1px solid #6284a3;
+  border-radius: 5px;
+}
+
 .weather-app {
   border: 1px solid #dadde1;
   border-radius: 5px;
   padding: 30px;
+  background-image: url(../images/background.png);
+  background-size: cover;
+  background-position: center;
 }
 .weather-app-wrapper {
   max-width: 400px;
-  margin: 40px auto;
+  margin: 15px auto;
 }
 
 .row {
   font-size: 13px;
 }
 
-.col {
-  margin-top: 40px;
-}
-
 .temperature-now {
   position: relative;
   right: -20px;
+  text-align: center;
 }
 
 .temperature-now strong {
   font-size: 50px;
   line-height: 1;
-  text-align: center;
 }
 
 .units {
@@ -53,22 +71,26 @@ li:first-letter {
 }
 
 .active {
-  color: black;
+  color: #6284a3;
   cursor: default;
 }
 .active:hover {
   text-decoration: none;
+  color: #b91de9;
 }
 
 .weather-forecast {
   margin-top: 10px;
+  background-color: #6284a3;
+  border: 1px solid #6284a3;
+  border-radius: 5px;
+  opacity: 80%;
 }
 
 .weather-forecast h3 {
-  color: rgb(186, 186, 186);
+  color: rgb(255, 255, 255);
   font-size: 14px;
   font-weight: 400;
-  text-align: center;
   height: 15px;
   line-height: 15px;
   padding-top: 7px;
@@ -81,11 +103,14 @@ li:first-letter {
 }
 
 .weather-forecast-temperature {
-  text-align: center;
-  color: rgb(135, 135, 135);
+  color: rgb(255, 255, 255);
   font-size: 13px;
   font-weight: 400;
   height: auto;
   line-height: 15px;
   white-space: nowrap;
+}
+
+small {
+  color: black;
 }
